--- a/delete_user_info.ipynb
+++ b/delete_user_info.ipynb
@@ -20,9 +20,9 @@
    "outputs": [],
    "source": [
     "# Connect to Redis Client\n",
-    "hostname = \"redis-18251.c13.us-east-1-3.ec2.cloud.redislabs.com\"\n",
-    "portnumber = 18251\n",
-    "password = \"OzLnEKbM7fYZKjjOErvPnhu9Pe0PzLMY\"\n",
+    "hostname = \"rredis-19166.c281.us-east-1-2.ec2.redns.redis-cloud.com\"\n",
+    "portnumber = 19166\n",
+    "password = \"whVztD0RJeLPQJM5pz50A7wcys8c1tIA\"\n",
     "\n",
     "r = redis.StrictRedis(host=hostname, port=portnumber, password=password)"
    ]
